--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
   "dependencies": {
     "dotenv-webpack": "^1.7.0",
     "firebase": "^7.8.1",
-    "styled-components": "^5.0.1",
     "firebase-admin": "^8.3.0",
     "firebase-functions": "^3.2.0",
     "next": "^9.0.2",
+    "next-absolute-url": "^1.2.0",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "styled-components": "^5.0.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
