--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "watch:client": "next src/client",
     "watch:server": "babel src/server --out-dir dist/server --source-maps --watch",
     "watch": "yarn watch:client & yarn watch:server",
-    "serve": "cross-env NODE_ENV=production yarn firebase serve --only functions,hosting",
+    "serve": "firebase serve --only functions",
+    "shell": "firebase functions:shell",
     "predeploy": "rimraf dist/ && yarn build",
     "deploy": "yarn firebase deploy --only functions,hosting",
     "deploy:hosting": "yarn firebase deploy --only hosting"
@@ -21,13 +22,19 @@
     "node": "10"
   },
   "dependencies": {
+    "@sendgrid/inbound-mail-parser": "^6.5.1",
+    "cors": "^2.8.5",
     "dotenv-webpack": "^1.7.0",
+    "express": "^4.17.1",
     "firebase": "^7.8.1",
     "firebase-admin": "^8.3.0",
     "firebase-functions": "^3.2.0",
+    "html2plaintext": "^2.1.2",
     "moment": "^2.24.0",
     "next": "^9.0.2",
     "next-absolute-url": "^1.2.0",
+    "node-html-parser": "^1.2.4",
+    "postmark": "^2.3.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "styled-components": "^5.0.1",
