--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "deploy:hosting": "yarn firebase deploy --only hosting"
   },
   "engines": {
-    "node": "10"
+    "node": "12.13.0"
   },
   "dependencies": {
     "@sendgrid/inbound-mail-parser": "^6.5.1",
@@ -29,6 +29,7 @@
     "firebase": "^7.8.1",
     "firebase-admin": "^8.3.0",
     "firebase-functions": "^3.2.0",
+    "framer-motion": "^1.8.4",
     "html2plaintext": "^2.1.2",
     "moment": "^2.24.0",
     "next": "^9.0.2",
